Fixed calendar readability and made it look fancy

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,7 +8,7 @@
     --ion-color-base-rgb: var(--ion-color-dream-rgb);
 }
 
-/* The CSS for the app */
+/* The CSS for the app and mostly homepage: */
 
 .page-background {
     --background: url('../images/starbackground.jpg') 0 0/100% 100% no-repeat!important;
@@ -113,8 +113,23 @@ font-family: monospace;
     margin-right: 3%;
 }
 
+/* For Journal - Dream Search: */
+
+/* WHAT MUST BE DONE:
+    - Make the calendars more readable!
+*/
+
+.date-info {
+    
+}
+
+/* Try more stuff. */
 .dream-sign-info {
     color: black;
+    padding-left: 2%;
+    padding-right: 15%;
+    padding-top: 50%;
+    padding-bottom: 50%;
 }
 
 /* For Alarm - Custom Alarms: */
@@ -125,7 +140,7 @@ font-family: monospace;
     }
 }
 
-/* For Upload Alarm Sound */
+/* For Alarm - Upload Alarm Sound: */
 
 .audio-title {
     background: #BF40BF;
